--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
 	<title>Learn CSS</title>
 </head>
 <body>
-  <textarea id="selector-input" placeholder="eg. #hello ~ .world" rows="10" oninput="onInputChange()">
-  </textarea>
+  <textarea id="selector-input" placeholder="eg. #hello ~ .world" rows="10" oninput="onInputChange()"></textarea>
   <div class="text-center">select <span id="arrow">↓</span> things</div>
   <div id="sandbox-container">
-    <a href="#0"class="paginator left" onclick="onPaginateLeft()">←</a>
+    <a href="#0" class="paginator left" onclick="onPaginateLeft()">←</a>
     <div id="sandbox" class="overlay-container">
       <div id="overlay" class="overlay"></div>
       <div id="underlay" class="DO_NOT_OPEN"></div>
