woah such progress

--- a/index.html
+++ b/index.html
@@ -5,18 +5,26 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" type="text/css" href="./style.css">
-	<title>Learn CSS</title>
+	<title>select.pink</title>
 </head>
 <body>
-  <textarea id="selector-input" placeholder="eg. #hello ~ .world" rows="10" oninput="onInputChange()"></textarea>
-  <div class="text-center">select <span id="arrow">↓</span> things</div>
-  <div id="sandbox-container">
-    <a href="#0" class="paginator left" onclick="onPaginateLeft()">←</a>
-    <div id="sandbox" class="overlay-container">
-      <div id="overlay" class="overlay"></div>
-      <div id="underlay" class="DO_NOT_OPEN"></div>
+  <svg id="win" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 47.415 20.82">
+    <g font-weight="700" fill="#fff" aria-label="You Win!" font-size="10.583" font-family="FreeMono" letter-spacing="0" word-spacing="0" stroke-width=".265">
+      <path style="-inkscape-font-specification:'FreeMono Bold'" d="M2.608 20.471q-.1-.301.038-.458.148-.16.47-.266l.653-.215-.48-1.458L.842 16.23q-.644.212-.81-.291-.165-.503.508-.725l.895-.294q.663-.22.83.284.108.331-.22.618l1.405 1.052.494-1.678q-.452-.019-.564-.36-.1-.302.038-.459.148-.16.47-.266l.924-.305q.322-.106.53-.051.203.044.3.335.165.503-.488.718l-.86 2.936.48 1.457.654-.215q.673-.222.839.28.165.503-.508.725l-2.312.762q-.673.222-.84-.28zM9.17 13.851q1.065-.35 2.034.088.979.435 1.3 1.41.325.985-.204 1.917-.532.921-1.617 1.28-1.086.357-2.062-.068-.979-.435-1.303-1.42-.328-.995.204-1.917.531-.922 1.647-1.29zm.32 1.009q-.683.225-1.02.76-.336.534-.147 1.107.185.563.767.806.588.23 1.262.007.673-.222 1-.753.333-.544.147-1.107-.186-.563-.774-.793-.581-.242-1.235-.027zM16.194 12.795q-.302.1-.482-.008-.184-.118-.247-.309-.166-.502.498-.721l1.357-.447 1.116 3.387q.613-.202.779.3.166.503-.498.722l-.955.314-.159-.482q-.256.474-.514.704-.248.227-.66.363-.795.262-1.443-.015-.642-.29-.907-1.094l-.6-1.82-.27.09q-.252.083-.45-.008-.196-.091-.27-.312-.095-.292.042-.448.135-.167.457-.273l1.166-.385.92 2.795q.24.723 1.124.432.382-.126.59-.34.205-.223.46-.764l-.602-1.83-.352.116zM29.232 5.756q.663-.218.829.284.139.423-.307.659l.997 5.053-1.106.365-1.852-2.476.003 3.085-1.116.368-2.223-4.65q-.482.093-.622-.33-.099-.301.025-.465.135-.166.466-.276l1.317-.434q.674-.222.84.28.165.503-.508.725l-.483.16 1.263 2.614.015-2.523 1.046-.345 1.512 2.02-.55-2.85-.532.176q-.663.218-.829-.284-.096-.292.042-.449.134-.167.456-.273zM36.135 8.863q.663-.218.829.284.166.503-.498.721l-3.457 1.14q-.664.219-.83-.284-.096-.291.042-.448.135-.167.456-.273l1.227-.404-.786-2.382-.784.258q-.673.222-.839-.28-.1-.302.039-.459.147-.16.469-.266l1.79-.59 1.116 3.387zm-3.1-4.806l.348 1.055-1.186.391-.348-1.055zM38.644 9.15q-.664.22-.83-.283-.165-.503.498-.721l.06-.02-.785-2.382q-.62.182-.778-.3-.166-.503.507-.725l.945-.312.16.483q.248-.461.507-.692.255-.24.667-.375.784-.259 1.432.018.649.276.914 1.08l.603 1.83q.613-.202.779.3.165.503-.498.721l-.895.295q-.673.222-.839-.28-.165-.503.448-.705l-.59-1.789q-.239-.724-1.143-.426-.352.116-.584.36-.221.24-.447.738l.603 1.83.06-.02q.663-.22.829.283.166.503-.498.722zM45.846.926l.692 3.082q.113.509-.33.655-.21.07-.395-.015-.173-.088-.27-.312l-1.275-2.89q-.1-.234-.13-.324-.116-.352.043-.65.155-.307.507-.423.351-.116.649.042.307.155.42.497.023.07.089.338zm1.085 5.66l-.17.056q-.282.093-.546-.032-.257-.138-.347-.409-.089-.271.039-.525.135-.268.416-.36l.171-.057q.282-.092.535.036.254.128.347.409.093.281-.035.535t-.41.347z"/>
+    </g>
+  </svg>
+  <div id="main">
+    <div id="selector-input" contenteditable="true" placeholder="eg. div > #hello ~ .world" oninput="onInputChange(); trim(event)"></div>
+    <div class="line-space"></div>
+    <div id="explanation" class="text-center">turn the white box pink</div>
+    <div id="sandbox-container">
+      <a href="#0" class="paginator left" onclick="changePage(-1)">«</a>
+      <div id="sandbox" class="overlay-container">
+        <div id="overlay" class="overlay"></div>
+        <div id="underlay" class="DO_NOT_OPEN"></div>
+      </div>
+      <a href="#1" class="paginator right" onclick="changePage(1)">»</a>
     </div>
-    <a href="#1" class="paginator right" onclick="onPaginateRight()">→</a>
   </div>
   <script src="./learn.js"></script>
 </body>
