--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
       </div>
       <a href="#1" class="paginator right" onclick="changePage(1)">»</a>
     </div>
-    <details>
+    <div id="errormsg" class="text-center"></div>
+    <details class="text-center">
       <summary>references</summary>
-      <div id="references"></div>
+      <ul id="references"></ul>
     </details>
   </div>
   <script src="./select.pink.js"></script>
