clear colours on invalid selector, grow vertical-content

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <input id="selector-input" class="disabled" type="text" placeholder="eg. div > .yes" oninput="onInputChange()">
     <div id="content">
       <a href="#0" class="paginator left disabled" onclick="changePage(-1)">&laquo;</a>
-      <div>
+      <div id="vertical-content">
         <div class="indicator">
           <div class="neutral"></div>
           <div class="error"></div>
